# sagaflow

./: .gitignore  LICENSE  README.md  TODOS.md  mission.lock.json  mission.yaml  pyproject.toml  report.md  step1.md  step3.md  vocabulary_bootstrap.json
.claude/: .swarm-lock
.github/workflows/: ci.yml  publish.yml
.swarm/: mission.lock.sha
.swarm/state/: findings.jsonl
docs/: SKILL-TEMPLATE.md  generic-interpreter-spec.md
docs/specs/: 2026-04-23-repo-consolidation-design.md
sagaflow/: cli.py  hook.py  inbox.py  paths.py  prompts.py  registry.py  temporal_client.py  worker.py
sagaflow/durable/: activities.py  retry_policies.py  state.py
sagaflow/generic/: __init__.py  activities.py  tools.py  workflow.py
sagaflow/missions/: __init__.py  errors.py  retry_policies.py  state.py  workflow.py
sagaflow/transport/: anthropic_sdk.py  claude_cli.py  dispatcher.py  structured_output.py
skillflow/: cli.py  hook.py  notify.py  paths.py  registry.py  temporal_client.py  worker.py
skillflow/durable/: activities.py  retry_policies.py  state.py
skillflow/transport/: dispatcher.py
skills/autopilot/: __init__.py  state.py  workflow.py
skills/deep_debug/: __init__.py  state.py  workflow.py
skills/deep_design/: __init__.py  state.py  workflow.py
skills/deep_plan/: __init__.py  state.py  workflow.py
skills/deep_qa/: __init__.py  activities.py  state.py  workflow.py
skills/deep_research/: __init__.py  state.py  workflow.py
skills/flaky_test_diagnoser/: __init__.py  activities.py  state.py  workflow.py
skills/generic/: __init__.py
skills/hello_world/: __init__.py  state.py  workflow.py
skills/loop_until_done/: __init__.py  activities.py  state.py  workflow.py
skills/proposal_reviewer/: __init__.py  state.py  workflow.py
skills/team/: __init__.py  state.py  workflow.py
tests/: conftest.py  test_activities.py  test_anthropic_sdk.py  test_claude_cli.py  test_cli_doctor.py  test_cli_hook.py  test_cli_launch.py  test_cli_list_show.py  test_cli_mission_launch.py  test_cli_worker.py  test_dispatcher.py  test_hook.py  test_inbox.py  test_notify.py  test_paths.py  test_prompts.py  test_registry.py  test_retry_policies.py  test_state.py  test_structured_output.py  test_temporal_client.py  test_worker.py
tests/e2e/: test_end_to_end.py
tests/generic/: test_activities.py  test_call_claude_with_tools.py  test_cli_dispatch.py  test_tools.py  test_workflow.py
tests/skills/: test_autopilot.py  test_deep_debug.py  test_deep_debug_prompts.py  test_deep_design.py  test_deep_plan.py  test_deep_qa.py  test_deep_research.py  test_flaky_test_diagnoser.py  test_hello_world.py  test_hello_world_state.py  test_loop_until_done.py  test_team.py  (+2 more)
(+38 files in other folders)
