[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagaflow"
version = "0.1.0"
description = "Temporal-backed workflow runtime for Claude Code skills"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "npow" }]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "temporalio>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
sagaflow = "sagaflow.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
