[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sagaflow"
version = "0.5.4"
description = "Temporal-backed workflow runtime for Claude Code skills"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nissan Pow", email = "nissan.pow@gmail.com" }]
keywords = [
    "temporal",
    "workflow",
    "orchestration",
    "agents",
    "llm",
    "claude",
    "durable-execution",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "PyYAML>=6.0",
    "temporalio>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/npow/sagaflow"
Repository = "https://github.com/npow/sagaflow"
Issues = "https://github.com/npow/sagaflow/issues"

[project.scripts]
sagaflow = "sagaflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sagaflow", "skills"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["sagaflow.generic.*", "sagaflow.missions.*", "sagaflow.cli", "sagaflow.worker"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
